--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.53.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "@aws-cdk/aws-lambda": "1.53.0",
+    "@aws-cdk/aws-codepipeline": "1.53.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.53.0"
   }
 }
