--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "source-map-support": "^0.5.16",
     "@aws-cdk/aws-lambda": "1.53.0",
     "@aws-cdk/aws-codepipeline": "1.53.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.53.0"
+    "@aws-cdk/aws-codepipeline-actions": "1.53.0",
+    "@aws-cdk/pipelines": "1.53.0"
   }
 }
